Fix x overflow

--- a/frontend/app/styles/index.css
+++ b/frontend/app/styles/index.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wdth,wght@0,62..125,100..900;1,62..125,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
 
+body, html {
+  overflow-x: hidden !important;
+}
+
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden !important;
 }
 
 body * {
